Bug 282930 - Minor spelling error in #nvmecontrol format -> Crptographic
Summary: Minor spelling error in #nvmecontrol format -> Crptographic
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Many People
Assignee: Warner Losh
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-23 13:53 UTC by Gian-Simon Purkert
Modified: 2024-12-28 18:57 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gian-Simon Purkert 2024-11-23 13:53:32 UTC
#nvmecontrol format
Missing arg controller-id|namespace-id
Usage:
    nvmecontrol format <args> controller-id|namespace-id

Format/erase one or all the namespaces
Options:
 -C, --crypto                  - Crptographic erase  <--
Comment 1 Alexander Ziaee freebsd_triage 2024-11-23 19:11:00 UTC
I am unable to find any instances of `Crptographic` in the 15-Current manual pages. Can you give me more details? nvmecontrol(8)?
Comment 2 Gian-Simon Purkert 2024-11-24 16:38:23 UTC
It's not in man but the "quick-help"

Just put "nvmecontrol format" into terminal.
Comment 3 Alexander Ziaee freebsd_triage 2024-11-24 19:34:21 UTC
I see. Thanks!

https://reviews.freebsd.org/D47726
Comment 4 commit-hook freebsd_committer freebsd_triage 2024-12-06 16:16:44 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=e7aec3ccf759dcd3fe56ae2bdbec92839c166160

commit e7aec3ccf759dcd3fe56ae2bdbec92839c166160
Author:     Alexander Ziaee <concussious@runbox.com>
AuthorDate: 2024-12-06 16:13:53 +0000
Commit:     Warner Losh <imp@FreeBSD.org>
CommitDate: 2024-12-06 16:14:07 +0000

    nvmecontrol: Fix minor usage typo

    PR:             282930
    MFC after:      3 days
    Reported by:    Gian-Simon Purkert <gspurki@gmail.com>
    Reviewed by:    imp, jhb, emaste
    Differential Revision:  https://reviews.freebsd.org/D47726

 sbin/nvmecontrol/format.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Comment 5 commit-hook freebsd_committer freebsd_triage 2024-12-28 18:55:32 UTC
A commit in branch stable/13 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=1a2d8c4db2ae888f4e75b9f15f39934508fb61da

commit 1a2d8c4db2ae888f4e75b9f15f39934508fb61da
Author:     Alexander Ziaee <concussious@runbox.com>
AuthorDate: 2024-12-06 16:13:53 +0000
Commit:     Warner Losh <imp@FreeBSD.org>
CommitDate: 2024-12-28 18:17:40 +0000

    nvmecontrol: Fix minor usage typo

    PR:             282930
    MFC after:      3 days
    Reported by:    Gian-Simon Purkert <gspurki@gmail.com>
    Reviewed by:    imp, jhb, emaste
    Differential Revision:  https://reviews.freebsd.org/D47726

    (cherry picked from commit e7aec3ccf759dcd3fe56ae2bdbec92839c166160)

 sbin/nvmecontrol/format.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Comment 6 commit-hook freebsd_committer freebsd_triage 2024-12-28 18:57:34 UTC
A commit in branch stable/14 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=e4520bc1e2841c8b914101d833372cc1d93daf0e

commit e4520bc1e2841c8b914101d833372cc1d93daf0e
Author:     Alexander Ziaee <concussious@runbox.com>
AuthorDate: 2024-12-06 16:13:53 +0000
Commit:     Warner Losh <imp@FreeBSD.org>
CommitDate: 2024-12-28 18:17:44 +0000

    nvmecontrol: Fix minor usage typo

    PR:             282930
    MFC after:      3 days
    Reported by:    Gian-Simon Purkert <gspurki@gmail.com>
    Reviewed by:    imp, jhb, emaste
    Differential Revision:  https://reviews.freebsd.org/D47726

    (cherry picked from commit e7aec3ccf759dcd3fe56ae2bdbec92839c166160)

 sbin/nvmecontrol/format.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)