nvmecontrol: Fix minor usage typo

PR:		282930
MFC after:	3 days
Reported by:	Gian-Simon Purkert <gspurki@gmail.com>
Reviewed by:	imp, jhb, emaste
Differential Revision:	https://reviews.freebsd.org/D47726